--- a/css/tabStyles.css
+++ b/css/tabStyles.css
@@ -104,7 +104,7 @@ ul {
   display: flex;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 2;
 }
 
 .tab {
